Fix notification z-index with modals

--- a/client/src/sass/include/_variables.scss
+++ b/client/src/sass/include/_variables.scss
@@ -173,9 +173,9 @@ $zindex: (
   help-popover    : 17000,
   privacymsg      : 17500,
   header          : 17500,
-  notification    : 18000,
   modal           : 19000,
-  hotkeys         : 19000
+  hotkeys         : 19000,
+  notification    : 20000
 );
 
 @function z($label) {
